--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/desktop_app.css">
     <link rel="stylesheet" href="css/messaging.css">
     <link rel="stylesheet" type="text/css" href="modules/css3-preloader/css/loader.css">
-    <link rel="stylesheet" href="css/ionic.app.css">
+    <link rel="stylesheet" href="css/ionic.app.min.css">
 
     <!-- TESTING IONIC -->
     <!--<link href="http://code.ionicframework.com/nightly/css/ionic.min.css" rel="stylesheet">-->
