Added google analytics

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <!--Multi-select module -->
     <script src="dist/isteven-angular-multiselect/isteven-multi-select.js"></script>
 
+
     <!--bootstrap-datetimepicker -->
     <script src="dist/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 
@@ -56,6 +57,9 @@
     <script src="modules/calendar/fullcalendar.js"></script>
     <script src="modules/calendar/services.js"></script>
     <link rel="stylesheet" href="modules/calendar/fullcalendar.css">
+
+    <!-- Google Analytics -->
+    <script src="lib/angular-google-analytics/dist/angular-google-analytics.js"></script>
 
     <!--ADAPTIVE-MAPS MODULE-->
     <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
